--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 
 	<body class="sapUiBody" id="content">
 		<h1 style="color: blue;">Main title, baby !</h1>
+		<h2 style="color: red;">Awesome subtitle</h2>
 	</body>
 
 </html>
