--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 		<meta http-equiv="X-UA-Compatible" content="IE=edge" />
 		<meta charset="UTF-8">
 
-		<title>openSApProto</title>
+		<title>Page of quotations</title>
 	</head>
 
 	<body class="sapUiBody" id="content">
