Revert "Coloring the header"
This reverts commit 311a711a0aa4dc3ddb50f97b272794efcd11e459.

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 	</head>
 
 	<body class="sapUiBody" id="content">
-		<h1 style="color: blue;">Main title, baby !</h1>
+		<h1>Main title, baby !</h1>
 	</body>
 
 </html>
