--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 
 	<body class="sapUiBody" id="content">
 		<h1 style="color: blue;">Main title, baby !</h1>
+		<p> This is the master divergence</p>
 		<h2 style="color: purple;">Awesome subtitle</h2>
 	</body>
 
