--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
 	<body class="sapUiBody" id="content">
 		<h1 style="color: blue;">Main title, baby !</h1>
 		<h2 style="color: purple;">Awesome subtitle</h2>
+		<p>Let's go full divergent</p>
 	</body>
 
 </html>
