--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 		<meta http-equiv="X-UA-Compatible" content="IE=edge" />
 		<meta charset="UTF-8">
 
-		<title>openSApProto</title>
+		<title>Page of quotes</title>
 	</head>
 
 	<body class="sapUiBody" id="content">
@@ -13,6 +13,10 @@
 		<p> This is the master divergence</p>
 		<h2 style="color: purple;">Awesome subtitle</h2>
 		<p>Let's go full divergent</p>
+		
+		<ul>
+			<li>Quote 1</li>
+		</ul>
 	</body>
 
 </html>
