--- a/index.html
+++ b/index.html
@@ -10,9 +10,9 @@
 	</head>
 
 	<body class="sapUiBody" id="content">
-		<h1 style="color: blue;">Main title, baby !</h1>
+		<h1>Main title, baby !</h1>
 		<p> This is the master divergence</p>
-		<h2 style="color: purple;">Awesome subtitle</h2>
+		<h2>Awesome subtitle</h2>
 		<p>Let's go full divergent</p>
 		
 		<ul>
