--- a/index.html
+++ b/index.html
@@ -21,6 +21,8 @@
 			<li>Quote 3</li>
 			<li>Quote 4</li>
 			<li>Quote 5</li>
+			<li>Quote 4 - bis</li>
+			<li>Quote 5 - bis</li>
 		</ul>
 	</body>
 
