very first list item

--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
 		<p>Let's go full divergent</p>
 		
 		<ul>
+			<li>First list item</li>
 			<li>Quote 1</li>
 			<li>Quote 2</li>
 			<li>Quote 3</li>
