--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 	</head>
 
 	<body class="sapUiBody" id="content">
-		<h1>Main title, baby !</h1>
+		<h1>Full of quotes !</h1>
 		<p> This is the master divergence</p>
 		<h2>Awesome subtitle</h2>
 		<p>Let's go full divergent</p>
