Change second header
Not making any sense though

--- a/index.html
+++ b/index.html
@@ -11,8 +11,7 @@
 
 	<body class="sapUiBody" id="content">
 		<h1>Full of quotes !</h1>
-		<p> This is the master divergence</p>
-		<h2>Awesome subtitle</h2>
+		<h2>well....</h2>
 		<p>Let's go full divergent</p>
 		
 		<ul>
