--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
 			<li>Quote 5 - bis</li>
 			<li>Quote 6</li>
 			<li>Quote from Spock</li>
+			<li>Quote from Benjamin Franklin</li>
 		</ul>
 	</body>
 
